added context page

--- a/Budget.Furiax/Budget/appsettings.json
+++ b/Budget.Furiax/Budget/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BudgetDB": "Server=(localdb)\\mssqllocaldb;Database=BudgetDB;Trusted_Connection=True;"
+  }
 }
