Changes to Seed Data which required a new Migration Model.

--- a/MVCBudget.Forser/appsettings.Development.json
+++ b/MVCBudget.Forser/appsettings.Development.json
@@ -27,6 +27,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQLConnection": "Server=192.168.1.9;Database=BudgetApp;Encrypt=false;User Id=Budget;Password=Budget"
+    "MSSQLConnection": "Server=192.168.1.9;Database=BudgetApp;MultipleActiveResultSets=true;Encrypt=false;User Id=Budget;Password=Budget"
   }
 }
