--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/appsettings.json
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {"SQLServer" : "Server:(LocalDb)\\MVC.Budget;Database=MVC.Budget;Integrated Security = true"}
+  "ConnectionStrings": {"SQLServer" : "Server=(LocalDb)\\MVC.Budget;Database=MVC.Budget;Integrated Security = true"}
 }
