--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Properties/launchSettings.json
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Properties/launchSettings.json
@@ -8,21 +8,12 @@
       "sslPort": 44332
     }
   },
-  "profiles": {
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5126",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
+  "profiles": {    
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7246;http://localhost:5126",
+      "applicationUrl": "https://localhost:7246",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
