--- a/Budget.StevieTV/Budget.StevieTV/Budget.StevieTV.csproj
+++ b/Budget.StevieTV/Budget.StevieTV/Budget.StevieTV.csproj
@@ -7,11 +7,22 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Transaction\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Transaction\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Transaction\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Transaction\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Transaction\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Transaction\_AddTransactionPartial.cshtml" />
     </ItemGroup>
 
 </Project>
