--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/appsettings.json
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "Auto-Migrate": false,
-  "ConnectionStrings": { "SQLServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MVC.Budget;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" },
+  "ConnectionStrings": { "SQLServer": "Server=(LocalDb)\\MVC.Budget; Database=MVC.Budget; Integrated Security=true;" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
