--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/lib/package.json
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/lib/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.2",
-    "chart.js": "^4.4.1"
+    "chart.js": "^4.4.1",
+    "country-select-js": "^2.1.0"
   }
 }
