--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/MVC.Budget.K-MYR.csproj
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/MVC.Budget.K-MYR.csproj
@@ -27,13 +27,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="RESTCountries.NET" Version="3.1.0" />
+    <PackageReference Include="SimdLinq" Version="1.3.2" />
   </ItemGroup>
 
 </Project>
