--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/lib/package.json
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/lib/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
-    "country-select-js": "^2.1.0"
+    "country-select-js": "^2.1.0",
+    "datatables.net": "^2.0.3",
+    "datatables.net-bs5": "^2.0.3",
+    "ion-rangeslider": "^2.3.1"
   }
 }
