--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/lib/package.json
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/lib/package.json
@@ -4,7 +4,6 @@
     "chart.js": "^4.4.1",
     "country-select-js": "^2.1.0",
     "datatables.net": "^2.0.3",
-    "datatables.net-bs5": "^2.0.3",
-    "ion-rangeslider": "^2.3.1"
+    "datatables.net-bs5": "^2.0.3"
   }
 }
