--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/package.json
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/package.json
@@ -26,6 +26,7 @@
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch"
   }
 }
