--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/package.json
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "bootstrap-datepicker": "^1.10.0",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.1",
     "country-select-js": "^2.1.0",
