--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/package.json
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/package.json
@@ -4,24 +4,22 @@
   "repository": "",
   "license": "MIT",
   "version": "",
-  "dependencies": {
+  "devDependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-datepicker": "^1.10.0",
     "bootstrap-icons": "^1.11.3",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.2",
     "country-select-js": "^2.1.0",
-    "datatables.net": "^2.0.3",
-    "datatables.net-bs5": "^2.0.3",
+    "css-loader": "^6.10.0",
+    "datatables.net": "^2.0.5",
+    "datatables.net-bs5": "^2.0.5",
     "jquery": "^3.7.1",
     "jquery-validation": "^1.20.0",
-    "jquery-validation-unobtrusive": "^4.0.0"
-  },
-  "devDependencies": {
-    "css-loader": "^6.10.0",
+    "jquery-validation-unobtrusive": "^4.0.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
-    "style-loader": "^3.3.4",
     "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
