--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/package.json
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.2",
     "country-select-js": "^2.1.0",
     "css-loader": "^6.10.0",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "datatables.net": "^2.0.5",
     "datatables.net-bs5": "^2.0.5",
     "jquery": "^3.7.1",
@@ -20,13 +21,14 @@
     "mini-css-extract-plugin": "^2.9.0",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
-    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.91.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-manifest-plugin": "^5.0.0"
   },
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "build_dev": "webpack --config webpack.config.js",
+    "build_prod": "webpack --config webpack.config.prod.js",
+    "watch": "webpack --config webpack.config.js --watch"
   }
 }
