--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/package.json
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/package.json
@@ -10,6 +10,7 @@
     "bootstrap-datepicker": "^1.10.0",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.2",
+    "copy-webpack-plugin": "^12.0.2",
     "country-select-js": "^2.1.0",
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^7.0.0",
