--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/MVC.Budget.K-MYR.csproj
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/MVC.Budget.K-MYR.csproj
@@ -55,6 +55,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="SimdLinq" Version="1.3.2" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.5" />
   </ItemGroup>
 
   <ItemGroup>
