--- a/Budget.hasona23/Budget.hasona23/appsettings.json
+++ b/Budget.hasona23/Budget.hasona23/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Db": "Server=(localdb)\\mssqllocaldb;Database=Db-024679ce-401d-4708-9d77-b81181dfa819;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "BudgetDB": "Server=(localdb)\\mssqllocaldb;Database=BudgetDB-92ea2319-0390-4180-984a-03bd7e71d4ae;Trusted_Connection=True;"
+  }
 }
